--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description":
     "An imitation of a code scene in the 'Matrix' movie using ASCII.",
   "author": "John Wong <johnwongwwc@gmail.com>",
+  "homepage": "http://waichungwong.github.io/matrix",
   "dependencies": {
     "@jworkshop/animator": "^0.0.5",
     "@jworkshop/canvasanimator": "^0.0.1",
